--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 </head>
 
-<body style="margin:0 15%;font-family: Cambria;">
+<body style="margin:0 15%;font-family: Cambria;line-height: 1.5;">
     <div class="pageContent" style="margin-bottom:200px;">
         <div id="logo" style="text-align: center;">
             <img src="image001.jpg" alt="">
