--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h4 style="font-size:22pt ;margin:0;color:rgb(99,36,35)">DILAPIDATION REPORT
 
             </h4>
-            <h4 style="font-size:22pt ;color:rgb(99,36,35)">INSPECTION DATE:: 08/12/16
+            <h4 style="font-size:22pt ;color:rgb(99,36,35)">INSPECTION DATE: 08/12/16
 
             </h4>
             <h4 style="font-size:22pt;margin:0;color:rgb(99,36,35)"> PROPERTY ADDRESS: 59A VERA STREET MORLEY W.A 6062
@@ -371,6 +371,7 @@
                         style="color:rgb(99,36,35);border-bottom: 1px solid rgb(99,36,35); font-size:12pt;padding-left:20px;">
                         GENERAL DESCRIPTION OF THE PROPERTY</h4>
                     <table border="1">
+
                         <tr>
                             <td>
                                 Building type:
@@ -419,7 +420,7 @@
                             <td>
                                 Occupancy status:</td>
                             <td>
-                                N/A
+                                Occupied
                             </td>
 
                         </tr>
@@ -433,14 +434,6 @@
                         </tr>
                         <tr>
                             <td>
-                                Occupancy status:</td>
-                            <td>
-                                Occupied
-                            </td>
-
-                        </tr>
-                        <tr>
-                            <td>
                                 Strata or company titles:</td>
                             <td>
                                 Unknown
@@ -449,21 +442,19 @@
                         </tr>
                         <tr>
                             <td>
-                                Orientation:</td>
+                                Orientation</td>
                             <td>
                                 South facing
                             </td>
-
                         </tr>
                         <tr>
                             <td>
                                 Prevailing weather conditions at the time of inspection:</td>
                             <td>
-                                Fine
+                                Unknown
                             </td>
 
                         </tr>
-
 
                     </table>
                 </li>
@@ -1179,65 +1170,73 @@
                     <h4ٍ
                         style="color:rgb(99,36,35);border-bottom: 1px solid rgb(99,36,35); font-size:12pt;padding-left:20px;">
                         EXCLUSIONS</h4>
-                    <p style="font-size:11pt;color:black">
-                        The Client acknowledges that this report does not cover or deal with: </p>
-                    <ul style="list-style: lower-alpha;">
-                        <li style="margin-top:50px">any individual Minor Defect;</li>
-                        <li style="margin-top:50px">solving or providing costs for any rectification or repair work;
-                        </li>
-                        <li style="margin-top:50px"> the structural design or adequacy of any element of construction of
-                            the Property;
-                        </li>
-                        <li style="margin-top:50px"> detection of wood destroying insects such as termites and wood
-                            borers;
-                        </li>
-                        <li style="margin-top:50px">the operation of fireplaces and chimneys;
-                        </li>
+                        <p style="font-size:11pt;color:black">
+                            The Client acknowledges that this report does not cover or deal with: </p>
+                        <ul style="list-style: lower-alpha;">
+                            <li style="margin-top:50px">any individual Minor Defect;</li>
+                            <li style="margin-top:50px">solving or providing costs for any rectification or repair work;
+                            </li>
+                            <li style="margin-top:50px"> the structural design or adequacy of any element of
+                                construction of
+                                the Property;
+                            </li>
+                            <li style="margin-top:50px"> detection of wood destroying insects such as termites and wood
+                                borers;
+                            </li>
+                            <li style="margin-top:50px">the operation of fireplaces and chimneys;
+                            </li>
 
-                        <li style="margin-top:50px">
-                            any services including building, engineering (electronic), fire and smoke detection or
-                            mechanical;
-                        </li>
-                        <div class="pageFooter"
-                            style="border-top: 4px solid rgb(99,36,35); margin-top: 100px;opacity: .7;">
-                            <div style="border-top:1px solid rgb(99,36,35);margin-top:2px; padding:5px 0;">
-                                <span style="float:left ;font-size:11pt">Master Building Inspectors Pty Ltd A.C.N 601
-                                    308 936 </span>
-                                <span style="float:right;font-size:11pt;">page 12</span></div>
+                            <li style="margin-top:50px">
+                                any services including building, engineering (electronic), fire and smoke detection or
+                                mechanical;
+                            </li>
+                            <div class="pageFooter"
+                                style="border-top: 4px solid rgb(99,36,35); margin-top: 100px;opacity: .7;">
+                                <div style="border-top:1px solid rgb(99,36,35);margin-top:2px; padding:5px 0;">
+                                    <span style="float:left ;font-size:11pt">Master Building Inspectors Pty Ltd A.C.N
+                                        601
+                                        308 936 </span>
+                                    <span style="float:right;font-size:11pt;">page 12</span></div>
 
-                        </div>
+                            </div>
 
-                        <li style="margin-top:50px">
-                            lighting, energy efficiency and automated systems.
-                        </li>
-                        <li style="margin-top:50px">
-                            any swimming pools and associated pool equipment or spa baths and spa equipment or the like;
-                        </li>
-                        <li style="margin-top:50px">
-                            any appliances such as dishwashers, incinerators, ovens, stoves and ducted vacuum systems;
-                        </li>
-                        <li style="margin-top:50px">
-                            a review of occupational, health or safety issues such as asbestos content, the provision of
-                            safety glass or the use of lead based paints
-                        </li>
+                            <li style="margin-top:50px">
+                                lighting, energy efficiency and automated systems.
+                            </li>
+                            <li style="margin-top:50px">
+                                any swimming pools and associated pool equipment or spa baths and spa equipment or the
+                                like;
+                            </li>
+                            <li style="margin-top:50px">
+                                any appliances such as dishwashers, incinerators, ovens, stoves and ducted vacuum
+                                systems;
+                            </li>
+                            <li style="margin-top:50px">
+                                a review of occupational, health or safety issues such as asbestos content, the
+                                provision of
+                                safety glass or the use of lead based paints
+                            </li>
 
-                        <li style="margin-top:50px">
-                            a review of environmental or health or biological risks such as toxic mould;
-                        </li>
-                        <li style="margin-top:50px">
-                            whether the building complies with the provisions of any building Act, code, regulation(s)
-                            or by-laws; </li>
-                        <li style="margin-top:50px">
-                            whether the ground on which the building rests has been filled, is liable to subside, swell
-                            or shrink, is subject to landslip or tidal inundation, or if it is flood prone; or </li>
-                        <li style="margin-top:50px">in the case of strata and company title properties, the inspection
-                            of common property areas or strata/company records.
-                        </li>
+                            <li style="margin-top:50px">
+                                a review of environmental or health or biological risks such as toxic mould;
+                            </li>
+                            <li style="margin-top:50px">
+                                whether the building complies with the provisions of any building Act, code,
+                                regulation(s)
+                                or by-laws; </li>
+                            <li style="margin-top:50px">
+                                whether the ground on which the building rests has been filled, is liable to subside,
+                                swell
+                                or shrink, is subject to landslip or tidal inundation, or if it is flood prone; or </li>
+                            <li style="margin-top:50px">in the case of strata and company title properties, the
+                                inspection
+                                of common property areas or strata/company records.
+                            </li>
 
-                    </ul>
-                    <p style="margin-top:50px;"> Any of the above matters may be the subject of a special-purpose
-                        inspection report, which is adequately specified and undertaken by an appropriately
-                        qualified inspector.</p>
+                        </ul>
+                        <p style="margin-top:50px;"> Any of the above matters may be the subject of a special-purpose
+                            inspection report, which is adequately specified and undertaken by an appropriately
+                            qualified inspector.</p>
 
                 </li>
                 <li style="margin-top:50px">
